Fix variable and display name typo

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -144,8 +144,8 @@ stages:
             - download: current
               artifact: drop
             - task: AzureWebApp@1
-              displayName: 'Azzure App Service Deploy: website'
+              displayName: 'Azure App Service Deploy: website'
               inputs:
                 azureSubscription: 'Resource Manager - Tailspin - Space Game'
-                appName: '$(WebbAppNameStaging)'
+                appName: '$(WebAppNameStaging)'
                 package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
